# nostr-arena

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/nostr_arena/: __init__.py
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
crates/nostr-arena-core/: Cargo.toml
crates/nostr-arena-core/src/: arena.rs  client.rs  lib.rs  types.rs
docs/: api.md  architecture.md  protocol.md
examples/: tui.rs
examples/pygame/: main.py
examples/rust-tui/: Cargo.toml
examples/rust-tui/src/: main.rs
examples/web/: index.html
src/: arena.rs  client.rs  error.rs  lib.rs  qr.rs  spawn.rs  tests.rs  time.rs  types.rs
