[package]
name = "nostr-arena"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kako-jun/nostr-arena"
authors = ["kako-jun <ppdg85ae99aaq2q2@gmail.com>"]
description = "Nostr-based real-time multiplayer game arena. No server required."
keywords = ["nostr", "multiplayer", "game", "p2p", "realtime"]
categories = ["games", "network-programming"]

[features]
default = ["native"]
native = ["tokio/full", "nostr-sdk/all-nips"]
wasm = ["nostr-sdk/nip04", "nostr-sdk/nip44", "getrandom/js", "wasm-bindgen-futures"]

[dependencies]
nostr-sdk = { version = "0.38", default-features = false }
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
rand = "0.8"
qrcode = "0.14"
getrandom = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "tui"
path = "examples/tui.rs"
