[package]
name = "nostr-arena-python"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kako-jun/nostr-arena"
authors = ["kako-jun <ppdg85ae99aaq2q2@gmail.com>"]

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
nostr-arena-core = { path = "../../crates/nostr-arena-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-asyncio-0-23 = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
