[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nostr-arena"
version = "0.2.0"
description = "Nostr-based real-time multiplayer game arena. No server required."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "kako-jun", email = "ppdg85ae99aaq2q2@gmail.com" }
]
keywords = ["nostr", "multiplayer", "game", "p2p", "realtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
    "Topic :: Internet",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/kako-jun/nostr-arena"
Repository = "https://github.com/kako-jun/nostr-arena"
Issues = "https://github.com/kako-jun/nostr-arena/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "nostr_arena._core"
