[package]
name = "nostr-arena-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Nostr-based real-time multiplayer game arena. No server required."
keywords = ["nostr", "multiplayer", "game", "p2p", "realtime"]
categories = ["games", "network-programming"]

[dependencies]
nostr-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
