[package]
name = "nostr-arena-tui-example"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tui-example"
path = "src/main.rs"

[dependencies]
nostr-arena-core = { path = "../../crates/nostr-arena-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
